# NetLearn

./: CMakeLists.txt
Common/: CMakeLists.txt  commondetermine.c  commondetermine.h
NetLearn/: CMakeLists.txt  NetLearn.cpp  NetLearn.h
StrEcho/: CMakeLists.txt  echostr5client.c  echostrclient.c  echostrserver.c  echosumclient.c  echosumserver.c  strcli.h
TimeGet/: CMakeLists.txt  common.h  timeclient.c  timeserver.c  timeservershowclient.c
